--- a/home/view/account/index.html
+++ b/home/view/account/index.html
@@ -1,4 +1,9 @@
 <{extends file="layout.html"}>
+<{block name="myStyles"}>
+<style type="text/css">
+
+</style>
+<{/block}>
 <{block name="scriptCode"}>
 <script>
     $(document).ready(function () {
@@ -27,151 +32,28 @@
         for (var i = 0; i < platformLists.length; i++){
             var platformData = platformLists[i];
             var platName = platformData["plat_name"];
-            var accLists = platformData["acc_list"];
+            var accLists = platformData["web_list"];
             dom += '<div class="platform-container">';
             dom += '<h4 class="text-gray" style="display: inline-block;">';
-            dom += '<i class="iconfont icon-tag" id=""></i>'+ platName + '</h4>';
+            dom += '<i class="iconfont icon-tag" id=""></i><span class="plat-name">'+ platName + '</span></h4>';
             dom += '<div class="row">';
             for (var j = 0; j < accLists.length; j++){
                 var accData = accLists[j];
                 var accId = accData["id"];
                 var accLogo = accData["logo"];
-                var accDesc = accData["acc_desc"];
-                var accUserName = accData["user"];
-                var accPasswd = accData["passwd"];
-                var accRemark = accData["remark"];
+                var accDesc = accData["web_desc"];
+                var accUserName = accData["web_title"];
                 var accAddress = accData["address"];
-                var accAttach = accData["hasAttachment"];
                 dom += '<div class="card-content">';
                 dom += '<a href="'+ accAddress +'"  target="_blank" class="card-link" >';
                 dom += '<img class="card-logo" src="'+ accLogo +'">';
                 dom += '<div class="text-content"><div class="card-title"><strong>' + accDesc + '</strong>';
-                if (accRemark.length > 0){
-                    accRemark = "'" + accRemark + "'";
-                    dom += '<span onclick="checkRemark('+ accRemark +')">备注</span>';
-                }
-                if (accAttach){
-                    // 有附件
-                    dom += '<span aid="'+ accId +'" onclick="checkAttachment(this)">附件</span>';
-                }
                 dom += '</div><input id="acc_user_'+ accId +'" style="width: 73%" type="text" class="user-name" value="'+ accUserName +'" readonly="readonly">';
-                dom += '<i accId="'+ accId +'" onclick="copyUserName(this)" class="icon icon-reply"></i>';
-                dom += '<input id="acc_pass_'+ accId +'" style="width: 73%" type="password" class="user-pass" value="'+ accPasswd +'" readonly="readonly">';
-                dom += '<i accId="'+ accId +'" pass="'+ accPasswd +'" onclick="checkPasswd(this)" class="iconfont icon-Xtubiao-chakan"></i>';
-                dom += '<i accId="'+ accId +'" pass="'+ accPasswd +'"  onclick="copyPasswd(this)" class="icon icon-reply"></i><input class="real-pass" type="text" id="real_pass_'+ accId +'">';
                 dom += '</div></a></div>';
             }
             dom += '</div></div>';
         }
         $(".cards-container").html(dom);
-    }
-
-    // 拷贝用户名
-    function copyUserName(obj) {
-        // 阻止m默认事件
-        var e = window.event || arguments.callee.caller.arguments[0];
-        e.preventDefault();
-
-        var $this = $(obj);
-        var accId = $this.attr("accId");
-        var inputId = "acc_user_" + accId;
-        var input = $("#" + inputId);
-
-        copyInputContent(input);
-    }
-
-    // 查看密码
-    function checkPasswd(obj) {
-        // 阻止m默认事件
-        var e = window.event || arguments.callee.caller.arguments[0];
-        e.preventDefault();
-
-        var $this = $(obj);
-        var accId = $this.attr("accId");
-        var passwd = $this.attr("pass");
-        var passInput = $("#acc_pass_" + accId);
-        if (passInput.attr('type') == "text"){
-            // 已经显示密码,隐藏密码
-
-            // 请求密码密文
-            var url = baseUrl + "?m=admin&c=API_Account&a=loadAccount&id=" + accId + "&API=";
-            get(url,function (data) {
-                var accData = data.data;
-                passInput.attr("type","password");
-                passInput.val(accData["passwd"]);
-                $this.attr("class","iconfont icon-Xtubiao-chakan");
-            },false);
-        }else {
-            // 显示密码
-            passInput.attr("type","text");
-
-            // 解密密码
-            var decryptPass = RSADecryptPass(passwd);
-            passInput.attr("type","text");
-            passInput.val(decryptPass);
-            $this.attr("class","iconfont icon-Xtubiao-guanbichakan");
-        }
-    }
-    
-    // 拷贝密码
-    function copyPasswd(obj) {
-        // 阻止m默认事件
-        var e = window.event || arguments.callee.caller.arguments[0];
-        e.preventDefault();
-
-        var $this = $(obj);
-        var accId = $this.attr("accId");
-        var passwd = $this.attr("pass");
-        var passInput = $("#acc_pass_" + accId);
-        var input = $("#real_pass_"+accId);
-
-        // 解密
-        var decryptPass = RSADecryptPass(passwd);
-        input.val(decryptPass);
-        // 复制密码
-        copyInputContent(input,"密码已复制");
-    }
-
-    // 查看备注
-    function checkRemark(remarkContent) {
-        // 阻止m默认事件
-        var e = window.event || arguments.callee.caller.arguments[0];
-        e.preventDefault();
-
-        $(".add-category-box").css("display","block");
-        $("#acc_remark").val(remarkContent);
-    }
-    
-    // 点击备注查看界面浮层
-    function clickCover() {
-        $(".add-category-box").css("display","none");
-    }
-    // 点击备注内容防止浮层消失
-    function clickRemarkContent() {
-        // 阻止事件冒泡
-        var e = window.event || arguments.callee.caller.arguments[0];
-        e.stopPropagation();
-    }
-
-    // 查看附件
-    function checkAttachment(obj) {
-        // 阻止m默认事件
-        var e = window.event || arguments.callee.caller.arguments[0];
-        e.preventDefault();
-
-        var $this = $(obj);
-        var accId = $this.attr("aid");
-        // 请求附件列表
-        var url = "?m=admin&c=API_Attachment&a=loadAttachmentLists&id=" + accId + "&tbName=acc_account";
-        get(url,function (data) {
-            layui.use('layer',function () {
-                var layer = layui.layer;
-                layer.photos({
-                    photos:data.data
-                    ,anim: 5
-                })
-            });
-        });
     }
 
 </script>
@@ -181,25 +63,6 @@
     <input type="hidden" value="<{$data.catId}>" id="cat_id">
     <div class="cards-container">
 
-    </div>
-</div>
-
-<!--查看备注浮层-->
-<div class="add-category-box" onclick="clickCover()">
-    <div class="add-category-container" onclick="clickRemarkContent()">
-        <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-            <legend id="legend_title">备注信息</legend>
-        </fieldset>
-        <form class="layui-form layui-form-pane" action="">
-            <div class="layui-form-item">
-                <div class="layui-form-item layui-form-text">
-                    <label class="layui-form-label">备注</label>
-                    <div class="layui-input-block">
-                        <textarea readonly="readonly" style="resize: none;height: 200px" id="acc_remark" placeholder="暂无备注" class="layui-textarea"></textarea>
-                    </div>
-                </div>
-            </div>
-        </form>
     </div>
 </div>
 <{/block}>
