--- a/admin/view/layout.html
+++ b/admin/view/layout.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <{block name="title"}>
-        <title>账号管家后台管理系统</title>
+        <title>网址导航后台系统</title>
     <{/block}>
 
     <link rel="stylesheet" href="<{PUBLIC_PATH}>common/css/icon.css" type="text/css">
     <link rel="stylesheet" href="<{PUBLIC_PATH}>common/layui/css/layui.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1877015_iktc5tvkpxm.css" type="text/css" >
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1877015_63gcxl7yhty.css" type="text/css" >
     <link rel="stylesheet" href="<{PUBLIC_PATH}>common/css/common.css" type="text/css">
     <link rel="stylesheet" href="<{PUBLIC_PATH}>admin/css/common.css">
     <{block name="myStyles"}> <{/block}>
@@ -35,13 +35,13 @@
                     <i class="icon icon-bar"></i>
                 </button>
             </div>
-            <div style="font:20px 'microsoft yahei';color: white;height: 55px;line-height: 55px;padding-left: 30px">账号管家后台系统</div>
+            <div style="font:20px 'microsoft yahei';color: white;height: 55px;line-height: 55px;padding-left: 30px">网址导航后台系统</div>
         </div>
 
         <div class="mod-message">
             <div class="message">
-                <a title="首页" target="_blank" href="?m=home&c=Common&a=index" class="btn btn-sm">
-                    <i title="前台" class="iconfont icon-home" onclick="window.location='index.php'"></i>
+                <a title="首页" target="_blank" href="?m=home&c=Account&a=index" class="btn btn-sm">
+                    <i title="前台" class="iconfont icon-home"></i>
                 </a>
 
                 <a title="退出" href="?m=admin&c=API_Base&a=logOut&API=" class="btn btn-sm">
@@ -52,16 +52,6 @@
 
         <ul class="mod-bar">
             <input type="hidden" val="0" id="hide_values">
-            <li>
-                <a id="general_info" class=" iconfont icon-changyongshoukuanrenguanli" href="?m=admin&c=GeneralInfo&a=index">
-                    <span>常用信息</span>
-                </a>
-            </li>
-            <li>
-                <a id="pass_manager" class=" icon icon-protect" href="?m=admin&c=PasswdManager&a=index">
-                    <span>密码管理</span>
-                </a>
-            </li>
             <li>
                 <a id="category_manager" class=" icon icon-format" href="?m=admin&c=CategoryManager&a=index">
                     <span>分类管理</span>
@@ -74,7 +64,7 @@
             </li>
             <li>
                 <a id="account_manager" class=" icon icon-users" href="?m=admin&c=AccountManager&a=index">
-                    <span>账号管理</span>
+                    <span>网站管理</span>
                 </a>
             </li>
             <li>
