--- a/public/home/css/cards.css
+++ b/public/home/css/cards.css
@@ -31,7 +31,7 @@ h4 i.iconfont {
 .card-content {
     position: relative;
     width: 25%;
-    height: 90px;
+    height: 80px;
     margin: 20px 0 0;
     float: left;
 }
@@ -59,7 +59,10 @@ h4 i.iconfont {
     margin: 0 15px;
     border-radius: 4px;
     border: 1px solid #e4ecf3;
-    height: 90px;
+    height: 80px;
+
+    /* 在原本元素上再加一个transition */
+    transition: all 0.3s ease;
 }
 
 .card-link:hover{
@@ -90,11 +93,10 @@ h4 i.iconfont {
 .card-logo {
     width: 40px;
     height: 40px;
-    border-radius: 50%;
     position: absolute;
     left: 10px;
-    top: 10px;
-    background: rgba(136,136,136,.15);
+    top: 15px;
+    background-color: transparent;
     margin-right: 10px;
     vertical-align: middle;
     border: 0;
@@ -102,8 +104,9 @@ h4 i.iconfont {
 
 .text-content {
     position: absolute;
-    top: 10px;
-    left: 60px;
+    top: 15px;
+    left: 65px;
+
 }
 
 .text-content .icon,.iconfont{
