--- a/admin/view/layout.html
+++ b/admin/view/layout.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1877015_63gcxl7yhty.css" type="text/css" >
     <link rel="stylesheet" href="<{PUBLIC_PATH}>common/css/common.css" type="text/css">
     <link rel="stylesheet" href="<{PUBLIC_PATH}>admin/css/common.css">
+    <link rel="icon" type="image/x-ico" href="<{PUBLIC_PATH}>common/img/favicon.ico" />
     <{block name="myStyles"}> <{/block}>
 </head>
 
@@ -65,11 +66,6 @@
             <li>
                 <a id="account_manager" class=" icon icon-users" href="?m=admin&c=AccountManager&a=index">
                     <span>网站管理</span>
-                </a>
-            </li>
-            <li>
-                <a id="icon_depository" class="icon icon-list" href="?m=admin&c=IconManager&a=index">
-                    <span>图标管理</span>
                 </a>
             </li>
             <li>
