--- a/home/view/layout.html
+++ b/home/view/layout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <{block name="title"}>
-        <title>账号管家</title>
+        <title>网址导航</title>
     <{/block}>
 
     <link rel="stylesheet" href="<{PUBLIC_PATH}>common/css/icon.css" type="text/css">
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="<{PUBLIC_PATH}>common/css/common.css" type="text/css">
     <link rel="stylesheet" href="<{PUBLIC_PATH}>home/css/common.css" type="text/css">
     <link rel="stylesheet" href="<{PUBLIC_PATH}>home/css/cards.css" type="text/css">
+    <link rel="icon" type="image/x-ico" href="<{PUBLIC_PATH}>common/img/favicon.ico" />
     <{block name="myStyles"}> <{/block}>
     <style type="text/css">
         #admin_icon {
