--- a/admin/view/db/index.html
+++ b/admin/view/db/index.html
@@ -63,6 +63,30 @@
         width: 140px;
     }
 
+    /*右下角查看日志按钮*/
+    .open-log-btn {
+        position: fixed;
+        right: 20px;
+        bottom: 30px;
+        background-color: #393D49;
+        width: 40px;
+        height: 40px;
+        border-radius: 30px;
+        border-color: transparent;
+        cursor: pointer;
+    }
+    .open-log-btn i {
+        width: 25px;
+        height: 25px;
+        display: inline-block;
+        font-size: 25px;
+        color: #ffffff;
+        background-color: #393D49;
+    }
+    .open-log-btn:hover {
+        opacity: 0.8;
+    }
+
 </style>
 <{/block}>
 <{block name="scriptCode"}>
@@ -262,5 +286,26 @@
         <input type="file" name="file" id="file_select_input" style="display:none">
         <input type="text" name="tbName" id="tb_name_input" style="display:none">
     </form>
+</div>
+
+<!--查看日志按钮-->
+<button type="button" class="open-log-btn" onclick="checkLog()">
+    <i title="查看日志" class="iconfont icon-jurassic_log"></i>
+</button>
+
+<!--日志信息展示浮层弹窗-->
+<div class="log-container">
+    <fieldset class="layui-elem-field layui-field-title log-title" style="margin-top: 20px;">
+        <legend>
+            后台任务日志
+            <i style="display: inline-block;width: 30px;height: 30px;font-size: 20px;color: #8a8a8a;cursor:pointer;" onclick="refreshLog()" title="刷新" class="iconfont icon-shuaxin1"></i>
+            <i style="display: inline-block;width: 30px;height: 30px;font-size: 20px;color: #8a8a8a;cursor:pointer;" onclick="clearLog()" title="清空" class="iconfont icon-qingkong"></i>
+        </legend>
+    </fieldset>
+
+
+    <!--日志显示区域-->
+    <div class="log-box"></div>
+    <div id="timer" style="display: none"></div>
 </div>
 <{/block}>
