--- a/admin/view/layout.html
+++ b/admin/view/layout.html
@@ -107,6 +107,7 @@
 <script src="<{PUBLIC_PATH}>common/js/common.js"  type="text/javascript"></script>
 <script src="<{PUBLIC_PATH}>admin/js/common.js"  type="text/javascript"></script>
 <script src="<{PUBLIC_PATH}>common/js/sidebar.js" type="text/javascript"></script>
+<script src="<{PUBLIC_PATH}>common/js/timer.jquery.min.js" type="text/javascript"></script>
 <{block name="scriptCode"}><{/block}>
 
 
