--- a/admin/view/db/index.html
+++ b/admin/view/db/index.html
@@ -224,7 +224,7 @@
         get(url,function () {
             // 刷新列表
             loadDbBackupLists();
-        },false,true);
+        },true,true);
     }
 
     // 导入备份
