--- a/admin/view/db/index.html
+++ b/admin/view/db/index.html
@@ -196,7 +196,7 @@
         get(url,function (data) {
             // 创建备份历史列表
             createBackupListDom(data.data);
-        },false);
+        },true);
     }
 
     // 创建备份文件列表
