--- a/admin/view/layout.html
+++ b/admin/view/layout.html
@@ -90,6 +90,7 @@
 <{/if}>
 
 <input type="hidden" id="slidebar_state_flag" value="<{$data.slideBarState}>"/>
+<input type="hidden" id="db_name" value="<{$data.dbname}>">
 
 <!--添加按钮-->
 <button type="button" class="add-btn" onclick="addData()">
