--- a/admin/view/account/index.html
+++ b/admin/view/account/index.html
@@ -13,6 +13,10 @@
         font-weight: bold;
     }
 
+    .layui-table tbody tr td {
+        text-align: center;
+    }
+
     .add-category-box {
         background-color: rgba(0,0,0,0.7);
         width: 100%;
