--- a/admin/view/account/index.html
+++ b/admin/view/account/index.html
@@ -14,8 +14,7 @@
     }
 
     .layui-table tbody tr td {
-        text-align: center;
-        align-content: center;
+        margin: 0 auto;
     }
 
     .add-category-box {
