--- a/admin/view/layout.html
+++ b/admin/view/layout.html
@@ -41,7 +41,7 @@
 
         <div class="mod-message">
             <div class="message">
-                <a title="首页" target="_blank" href="?m=home&c=Account&a=index" class="btn btn-sm">
+                <a title="首页" href="?m=home&c=Account&a=index" class="btn btn-sm">
                     <i title="前台" class="iconfont icon-home"></i>
                 </a>
 
