--- a/home/view/account/index.html
+++ b/home/view/account/index.html
@@ -47,8 +47,8 @@
                 dom += '<div class="card-content">';
                 dom += '<a href="'+ accAddress +'"  target="_blank" class="card-link" >';
                 dom += '<img class="card-logo" src="'+ accLogo +'">';
-                dom += '<div class="text-content"><div class="card-title"><strong>' + accDesc + '</strong>';
-                dom += '</div><input id="acc_user_'+ accId +'" style="width: 73%" type="text" class="user-name" value="'+ accUserName +'" readonly="readonly">';
+                dom += '<div class="text-content"><div class="card-title"><strong>' + accUserName + '</strong>';
+                dom += '</div><input id="acc_user_'+ accId +'" style="width: 73%" type="text" class="user-name" value="'+ accDesc +'" readonly="readonly">';
                 dom += '</div></a></div>';
             }
             dom += '</div></div>';
