--- a/home/view/account/index.html
+++ b/home/view/account/index.html
@@ -48,7 +48,7 @@
                 dom += '<a href="'+ accAddress +'"  target="_blank" class="card-link" >';
                 dom += '<img class="card-logo" src="'+ accLogo +'">';
                 dom += '<div class="text-content"><div class="card-title"><strong>' + accUserName + '</strong>';
-                dom += '</div><input id="acc_user_'+ accId +'" style="width: 90%;background-color: red" type="text" class="user-name" value="'+ accDesc +'" readonly="readonly">';
+                dom += '</div><input id="acc_user_'+ accId +'" style="width: 240px" type="text" class="user-name" value="'+ accDesc +'" readonly="readonly">';
                 dom += '</div></a></div>';
             }
             dom += '</div></div>';
