--- a/home/view/layout.html
+++ b/home/view/layout.html
@@ -44,7 +44,7 @@
                     <i id="admin_icon" title="后台" style="cursor:pointer;" onclick="toAdmin()" class="iconfont icon-ziyuan143"></i>
                 </button>
             </div>
-            <div style="font:20px 'microsoft yahei';color: white;height: 55px;line-height: 55px;padding-left: 30px">账号管家</div>
+            <div style="font:20px 'microsoft yahei';color: white;height: 55px;line-height: 55px;padding-left: 30px">网址导航</div>
         </div>
 
         <ul class="mod-bar">
