--- a/admin/view/category/index.html
+++ b/admin/view/category/index.html
@@ -181,9 +181,10 @@
         var dom = "";
         for(var i = 0; i < data.length; i++){
             var category = data[i];
-            dom += '<tr><td><i class="iconfont icon-'+ category["cat_icon"] +'"></i></td>';
-            dom += '<td>' + category["cat_title"] + '</td>';
+            dom += '<tr>';
             dom += '<td>' + category["sort"] + '</td>';
+            dom += '<td><i class="iconfont icon-'+ category["cat_icon"] +'"></i></td>';
+            dom += '<td>' + category["cat_title"] + '</td>';
             dom += '<td><ul class="plat_list_ul">';
 
             var platList = category["platform_list"];
@@ -317,9 +318,9 @@
                 </colgroup>
                 <thead>
                 <tr>
+                    <th>排序</th>
                     <th>分类图标</th>
                     <th>分类标题</th>
-                    <th>排序</th>
                     <th>平台</th>
                     <th>操作</th>
                 </tr>
