--- a/admin/view/category/index.html
+++ b/admin/view/category/index.html
@@ -46,13 +46,17 @@
         width: 250px;
     }
 
+    .layui-form-item .cat-sort {
+        width: 100px;
+    }
+
     .layui-input-inline .layui-btn {
         color: #cdcdcd
     }
 
     .icons-box {
         width: 700px;
-        height: 100px;
+        height: 50px;
         overflow-x: hidden;
         overflow-y: scroll;
         margin-bottom: 10px;
@@ -345,7 +349,7 @@
         <form class="layui-form layui-form-pane" action="">
             <div class="layui-form-item">
                 <label class="layui-form-label">排序</label>
-                <div class="layui-input-inline cat-name">
+                <div class="layui-input-inline cat-sort">
                     <input id="cat_sort" type="text" lay-verify="required" placeholder="请输入排序" autocomplete="off" class="layui-input">
                 </div>
             </div>
