--- a/admin/view/category/index.html
+++ b/admin/view/category/index.html
@@ -48,6 +48,7 @@
 
     .layui-form-item .cat-sort {
         width: 100px;
+        text-align: center;
     }
 
     .layui-input-inline .layui-btn {
