--- a/admin/view/category/index.html
+++ b/admin/view/category/index.html
@@ -48,7 +48,7 @@
 
     .layui-form-item .cat-sort {
         width: 100px;
-        text-align: center;
+        text-align: center!important;
     }
 
     .layui-input-inline .layui-btn {
