--- a/admin/view/category/index.html
+++ b/admin/view/category/index.html
@@ -48,7 +48,6 @@
 
     .layui-form-item .cat-sort {
         width: 100px;
-        text-align: center!important;
     }
 
     .layui-input-inline .layui-btn {
@@ -351,7 +350,7 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">排序</label>
                 <div class="layui-input-inline cat-sort">
-                    <input id="cat_sort" type="text" lay-verify="required" placeholder="请输入排序" autocomplete="off" class="layui-input">
+                    <input style="text-align: center" id="cat_sort" type="text" lay-verify="required" placeholder="请输入排序" autocomplete="off" class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item">
