--- a/admin/view/platform/index.html
+++ b/admin/view/platform/index.html
@@ -291,6 +291,7 @@
         $(".add-category-box").css("display","block");
         // 默认设置的平台名称
         $("#add_plat_name").val(addPlatformName);
+        $("#cat_sort").val(sort);
     }
 
     // 隐藏添加/修改分类浮层
