--- a/admin/view/platform/index.html
+++ b/admin/view/platform/index.html
@@ -275,6 +275,7 @@
             var platData = data.data;
             selectedCatId = platData["cat_id"];
             addPlatformName = platData["plat_name"];
+            sort = platData["sort"];
             // 加载分类
             loadCatList();
         })
