--- a/admin/view/account/index.html
+++ b/admin/view/account/index.html
@@ -618,6 +618,7 @@
         $("#login_address").val(addAddress);
         // logo
         $("#logo_img").attr("src",addLogo);
+        $("#cat_sort").val(sort);
     }
 
     // 隐藏添加/修改分类浮层
